<resources>
    <string name="app_name">Me Convide</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="todos">Todos | Home</string>
    <string name="ausentes">Ausentes</string>
    <string name="presentes">Presentes</string>
    <string name="todos_convidados">Todos convidados</string>
    <string name="salvar">Salvar</string>
    <string name="ausente">Ausente</string>
    <string name="presente">Presente</string>
    <string name="nao_confirmado">Não confirmado</string>
    <string name="confirmacao">Confirmação</string>
    <string name="nome">Nome</string>
    <string name="nome_validacao">Nome obrigatório!</string>
    <string name="convidado_salvo_com_sucesso">Convidado salvo com sucesso!</string>
    <string name="convidado_atualizado_com_sucesso">Convidado atualizado com sucesso!</string>
    <string name="erro_inesperado">Algo de errado ocorreu. Tente novamente mais tarde.</string>
    <string name="cancelar">Cancelar</string>
    <string name="remocao_convidado">Remoção de convidado</string>
    <string name="deseja_remover">Deseja remover convidado da lista?</string>
    <string name="remover">Remover</string>
    <string name="removido_com_sucesso">Convidado removido com sucesso.</string>
    <string name="total">Total</string>
    <string name="nome_obrigatorio">Nome é obrigatório</string>
    <string name="convidado_salvo">Convidado salvo</string>
    <string name="erro_salvar">Erro ao salvar</string>
    <string name="erro_atualizar">Erro ao atualizar</string>
    <string name="convidado_atualizado">Convidado atualizado</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="convidado_deletado">Convidado deletado</string>
    <string name="covidado_removido">Convidado removido com sucesso</string>
</resources>
