<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_general_margin"
    tools:context=".views.GuestFormActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/colorPrimaryText"
        android:textSize="10sp"
        android:textStyle="bold"
        app:textAllCaps="true" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
        android:text="@string/confirmacao"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="10sp"
        android:textStyle="bold"
        app:textAllCaps="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_not_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nao_confirmado" />

        <RadioButton
            android:id="@+id/radio_present"
            android:textColor="@color/colorTextPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presente" />

        <RadioButton
            android:id="@+id/radio_absent"
            android:textColor="@color/colorTextAbsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ausente" />

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/salvar"
        android:padding="20dp"
        android:background="@drawable/round_btn_linear_green"
        android:textColor="@color/colorTextButton"
        android:textStyle="bold" />

</LinearLayout>