<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="com.example.meconvideapp.views.fragments.allGuests.AllGuestsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_all_guests">
'
    </fragment>

    <fragment
        android:id="@+id/nav_present"
        android:name="com.example.meconvideapp.views.fragments.present.PresentFragment"
        android:label="@string/presentes"
        tools:layout="@layout/fragment_present" />

    <fragment
        android:id="@+id/nav_absent"
        android:name="com.example.meconvideapp.views.fragments.absent.AbsentFragment"
        android:label="@string/ausentes"
        tools:layout="@layout/fragment_absent" />
</navigation>