<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.allGuests.AllGuestsFragment">

    <LinearLayout
        android:id="@+id/linear_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextPresent"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/presentes" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ausentes"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextAbsent"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextTotal"
                android:gravity="center"
                android:text="@string/total" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_present_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextPresent"
                android:textSize="25sp"
                android:text="@string/presentes" />

            <TextView
                android:id="@+id/text_absent_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextAbsent"
                android:textSize="25sp"
                android:text="@string/ausentes" />

            <TextView
                android:id="@+id/text_all_invited_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextTotal"
                android:textSize="25sp"
                android:text="@string/total" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear_dashboard"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary" />
    |

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_all_guests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider" />
</RelativeLayout>